// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapCard.vue Events should receive and process correctly the event when dropdown is closed 1`] = `
<a href="http://example.com/viz/e97e0001-f1c2-425e-8c9b-0fb28da59200" class="card map-card card--can-hover">
  <div class="card-media"><img src="http://hello.example.com/api/v1/map/static/named/tpl_e97e0001_f1c2_425e_8c9b_0fb28da59200/600/280.png">
    <!---->
  </div> <span class="checkbox card-select"><input type="checkBox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../assets/icons/common/checkbox.svg"></span></span>
  <div class="card-actions">
    <mapquickactions-stub map="[object Object]"></mapquickactions-stub>
  </div>
  <div class="card-text">
    <div class="card-header">
      <h2 title="First Map" class="card-title title is-caption">
        First Map&nbsp;
        <span class="card-favorite"><img svg-inline="" src="../assets/icons/common/favorite.svg"></span></h2>
      <p class="card-description text is-caption is-txtSoftGrey">MapCard.noDescription</p>
    </div>
    <ul class="card-metadata">
      <li class="card-metadataItem text is-caption"><span class="icon icon--privacy icon--public"></span>
        <p>MapCard.shared.PUBLIC <span>| MapCard.views</span></p>
      </li>
      <!---->
      <li class="card-metadataItem text is-caption"><span class="icon"><img inline-svg="" src="../assets/icons/maps/calendar.svg"></span>
        <p>MapCard.lastUpdate</p>
      </li>
      <li class="card-metadataItem text is-caption"><span class="icon"><img inline-svg="" src="../assets/icons/maps/tag.svg"></span>
        <ul class="card-tagList">
          <li><span>MapCard.noTags</span></li>
        </ul>
        <!---->
      </li>
    </ul>
  </div>
</a>
`;

exports[`MapCard.vue Events should receive and process correctly the event when dropdown is open 1`] = `
<a href="http://example.com/viz/e97e0001-f1c2-425e-8c9b-0fb28da59200" class="card map-card card--quick-actions-open card--can-hover">
  <div class="card-media"><img src="http://hello.example.com/api/v1/map/static/named/tpl_e97e0001_f1c2_425e_8c9b_0fb28da59200/600/280.png">
    <!---->
  </div> <span class="checkbox card-select"><input type="checkBox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../assets/icons/common/checkbox.svg"></span></span>
  <div class="card-actions">
    <mapquickactions-stub map="[object Object]"></mapquickactions-stub>
  </div>
  <div class="card-text">
    <div class="card-header">
      <h2 title="First Map" class="card-title title is-caption">
        First Map&nbsp;
        <span class="card-favorite"><img svg-inline="" src="../assets/icons/common/favorite.svg"></span></h2>
      <p class="card-description text is-caption is-txtSoftGrey">MapCard.noDescription</p>
    </div>
    <ul class="card-metadata">
      <li class="card-metadataItem text is-caption"><span class="icon icon--privacy icon--public"></span>
        <p>MapCard.shared.PUBLIC <span>| MapCard.views</span></p>
      </li>
      <!---->
      <li class="card-metadataItem text is-caption"><span class="icon"><img inline-svg="" src="../assets/icons/maps/calendar.svg"></span>
        <p>MapCard.lastUpdate</p>
      </li>
      <li class="card-metadataItem text is-caption"><span class="icon"><img inline-svg="" src="../assets/icons/maps/tag.svg"></span>
        <ul class="card-tagList">
          <li><span>MapCard.noTags</span></li>
        </ul>
        <!---->
      </li>
    </ul>
  </div>
</a>
`;

exports[`MapCard.vue Methods should close quick actions 1`] = `
<a href="http://example.com/viz/e97e0001-f1c2-425e-8c9b-0fb28da59200" class="card map-card card--can-hover">
  <div class="card-media"><img src="http://hello.example.com/api/v1/map/static/named/tpl_e97e0001_f1c2_425e_8c9b_0fb28da59200/600/280.png">
    <!---->
  </div> <span class="checkbox card-select"><input type="checkBox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../assets/icons/common/checkbox.svg"></span></span>
  <div class="card-actions">
    <mapquickactions-stub map="[object Object]"></mapquickactions-stub>
  </div>
  <div class="card-text">
    <div class="card-header">
      <h2 title="First Map" class="card-title title is-caption">
        First Map&nbsp;
        <span class="card-favorite"><img svg-inline="" src="../assets/icons/common/favorite.svg"></span></h2>
      <p class="card-description text is-caption is-txtSoftGrey">MapCard.noDescription</p>
    </div>
    <ul class="card-metadata">
      <li class="card-metadataItem text is-caption"><span class="icon icon--privacy icon--public"></span>
        <p>MapCard.shared.PUBLIC <span>| MapCard.views</span></p>
      </li>
      <!---->
      <li class="card-metadataItem text is-caption"><span class="icon"><img inline-svg="" src="../assets/icons/maps/calendar.svg"></span>
        <p>MapCard.lastUpdate</p>
      </li>
      <li class="card-metadataItem text is-caption"><span class="icon"><img inline-svg="" src="../assets/icons/maps/tag.svg"></span>
        <ul class="card-tagList">
          <li><span>MapCard.noTags</span></li>
        </ul>
        <!---->
      </li>
    </ul>
  </div>
</a>
`;

exports[`MapCard.vue Methods should open quick actions 1`] = `
<a href="http://example.com/viz/e97e0001-f1c2-425e-8c9b-0fb28da59200" class="card map-card card--quick-actions-open card--can-hover">
  <div class="card-media"><img src="http://hello.example.com/api/v1/map/static/named/tpl_e97e0001_f1c2_425e_8c9b_0fb28da59200/600/280.png">
    <!---->
  </div> <span class="checkbox card-select"><input type="checkBox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../assets/icons/common/checkbox.svg"></span></span>
  <div class="card-actions">
    <mapquickactions-stub map="[object Object]"></mapquickactions-stub>
  </div>
  <div class="card-text">
    <div class="card-header">
      <h2 title="First Map" class="card-title title is-caption">
        First Map&nbsp;
        <span class="card-favorite"><img svg-inline="" src="../assets/icons/common/favorite.svg"></span></h2>
      <p class="card-description text is-caption is-txtSoftGrey">MapCard.noDescription</p>
    </div>
    <ul class="card-metadata">
      <li class="card-metadataItem text is-caption"><span class="icon icon--privacy icon--public"></span>
        <p>MapCard.shared.PUBLIC <span>| MapCard.views</span></p>
      </li>
      <!---->
      <li class="card-metadataItem text is-caption"><span class="icon"><img inline-svg="" src="../assets/icons/maps/calendar.svg"></span>
        <p>MapCard.lastUpdate</p>
      </li>
      <li class="card-metadataItem text is-caption"><span class="icon"><img inline-svg="" src="../assets/icons/maps/tag.svg"></span>
        <ul class="card-tagList">
          <li><span>MapCard.noTags</span></li>
        </ul>
        <!---->
      </li>
    </ul>
  </div>
</a>
`;

exports[`MapCard.vue Methods should show thumbnail error 1`] = `
<a href="http://example.com/viz/e97e0001-f1c2-425e-8c9b-0fb28da59200" class="card map-card card--can-hover">
  <div class="card-media has-error">
    <!---->
    <div class="MapCard-error"></div>
  </div> <span class="checkbox card-select"><input type="checkBox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../assets/icons/common/checkbox.svg"></span></span>
  <div class="card-actions">
    <mapquickactions-stub map="[object Object]"></mapquickactions-stub>
  </div>
  <div class="card-text">
    <div class="card-header">
      <h2 title="First Map" class="card-title title is-caption">
        First Map&nbsp;
        <span class="card-favorite"><img svg-inline="" src="../assets/icons/common/favorite.svg"></span></h2>
      <p class="card-description text is-caption is-txtSoftGrey">MapCard.noDescription</p>
    </div>
    <ul class="card-metadata">
      <li class="card-metadataItem text is-caption"><span class="icon icon--privacy icon--public"></span>
        <p>MapCard.shared.PUBLIC <span>| MapCard.views</span></p>
      </li>
      <!---->
      <li class="card-metadataItem text is-caption"><span class="icon"><img inline-svg="" src="../assets/icons/maps/calendar.svg"></span>
        <p>MapCard.lastUpdate</p>
      </li>
      <li class="card-metadataItem text is-caption"><span class="icon"><img inline-svg="" src="../assets/icons/maps/tag.svg"></span>
        <ul class="card-tagList">
          <li><span>MapCard.noTags</span></li>
        </ul>
        <!---->
      </li>
    </ul>
  </div>
</a>
`;

exports[`MapCard.vue Methods should toggle mouse hover 1`] = `
<a href="http://example.com/viz/e97e0001-f1c2-425e-8c9b-0fb28da59200" class="card map-card card--child-hover card--can-hover">
  <div class="card-media"><img src="http://hello.example.com/api/v1/map/static/named/tpl_e97e0001_f1c2_425e_8c9b_0fb28da59200/600/280.png">
    <!---->
  </div> <span class="checkbox card-select"><input type="checkBox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../assets/icons/common/checkbox.svg"></span></span>
  <div class="card-actions">
    <mapquickactions-stub map="[object Object]"></mapquickactions-stub>
  </div>
  <div class="card-text">
    <div class="card-header">
      <h2 title="First Map" class="card-title title is-caption">
        First Map&nbsp;
        <span class="card-favorite"><img svg-inline="" src="../assets/icons/common/favorite.svg"></span></h2>
      <p class="card-description text is-caption is-txtSoftGrey">MapCard.noDescription</p>
    </div>
    <ul class="card-metadata">
      <li class="card-metadataItem text is-caption"><span class="icon icon--privacy icon--public"></span>
        <p>MapCard.shared.PUBLIC <span>| MapCard.views</span></p>
      </li>
      <!---->
      <li class="card-metadataItem text is-caption"><span class="icon"><img inline-svg="" src="../assets/icons/maps/calendar.svg"></span>
        <p>MapCard.lastUpdate</p>
      </li>
      <li class="card-metadataItem text is-caption"><span class="icon"><img inline-svg="" src="../assets/icons/maps/tag.svg"></span>
        <ul class="card-tagList">
          <li><span>MapCard.noTags</span></li>
        </ul>
        <!---->
      </li>
    </ul>
  </div>
</a>
`;

exports[`MapCard.vue Methods should toggle mouse hover 2`] = `
<a href="http://example.com/viz/e97e0001-f1c2-425e-8c9b-0fb28da59200" class="card map-card card--can-hover">
  <div class="card-media"><img src="http://hello.example.com/api/v1/map/static/named/tpl_e97e0001_f1c2_425e_8c9b_0fb28da59200/600/280.png">
    <!---->
  </div> <span class="checkbox card-select"><input type="checkBox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../assets/icons/common/checkbox.svg"></span></span>
  <div class="card-actions">
    <mapquickactions-stub map="[object Object]"></mapquickactions-stub>
  </div>
  <div class="card-text">
    <div class="card-header">
      <h2 title="First Map" class="card-title title is-caption">
        First Map&nbsp;
        <span class="card-favorite"><img svg-inline="" src="../assets/icons/common/favorite.svg"></span></h2>
      <p class="card-description text is-caption is-txtSoftGrey">MapCard.noDescription</p>
    </div>
    <ul class="card-metadata">
      <li class="card-metadataItem text is-caption"><span class="icon icon--privacy icon--public"></span>
        <p>MapCard.shared.PUBLIC <span>| MapCard.views</span></p>
      </li>
      <!---->
      <li class="card-metadataItem text is-caption"><span class="icon"><img inline-svg="" src="../assets/icons/maps/calendar.svg"></span>
        <p>MapCard.lastUpdate</p>
      </li>
      <li class="card-metadataItem text is-caption"><span class="icon"><img inline-svg="" src="../assets/icons/maps/tag.svg"></span>
        <ul class="card-tagList">
          <li><span>MapCard.noTags</span></li>
        </ul>
        <!---->
      </li>
    </ul>
  </div>
</a>
`;

exports[`MapCard.vue should render correct contents 1`] = `
<a href="http://example.com/viz/e97e0001-f1c2-425e-8c9b-0fb28da59200" class="card map-card card--selected card--can-hover">
  <div class="card-media"><img src="http://hello.example.com/api/v1/map/static/named/tpl_e97e0001_f1c2_425e_8c9b_0fb28da59200/600/280.png">
    <!---->
  </div> <span class="checkbox card-select"><input type="checkBox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../assets/icons/common/checkbox.svg"></span></span>
  <div class="card-actions">
    <mapquickactions-stub map="[object Object]"></mapquickactions-stub>
  </div>
  <div class="card-text">
    <div class="card-header">
      <h2 title="First Map" class="card-title title is-caption">
        First Map&nbsp;
        <span class="card-favorite"><img svg-inline="" src="../assets/icons/common/favorite.svg"></span></h2>
      <p class="card-description text is-caption is-txtSoftGrey">MapCard.noDescription</p>
    </div>
    <ul class="card-metadata">
      <li class="card-metadataItem text is-caption"><span class="icon icon--privacy icon--public"></span>
        <p>MapCard.shared.PUBLIC <span>| MapCard.views</span></p>
      </li>
      <!---->
      <li class="card-metadataItem text is-caption"><span class="icon"><img inline-svg="" src="../assets/icons/maps/calendar.svg"></span>
        <p>MapCard.lastUpdate</p>
      </li>
      <li class="card-metadataItem text is-caption"><span class="icon"><img inline-svg="" src="../assets/icons/maps/tag.svg"></span>
        <ul class="card-tagList">
          <li><span>MapCard.noTags</span></li>
        </ul>
        <!---->
      </li>
    </ul>
  </div>
</a>
`;

exports[`MapCard.vue should render description and tag dropdown 1`] = `
<a href="http://example.com/viz/e97e0001-f1c2-425e-8c9b-0fb28da59200" class="card map-card card--can-hover">
  <div class="card-media"><img src="http://hello.example.com/api/v1/map/static/named/tpl_e97e0001_f1c2_425e_8c9b_0fb28da59200/600/280.png">
    <!---->
  </div> <span class="checkbox card-select"><input type="checkBox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../assets/icons/common/checkbox.svg"></span></span>
  <div class="card-actions">
    <mapquickactions-stub map="[object Object]"></mapquickactions-stub>
  </div>
  <div class="card-text">
    <div class="card-header">
      <h2 title="First Map" class="card-title title is-caption">
        First Map&nbsp;
        <span class="card-favorite"><img svg-inline="" src="../assets/icons/common/favorite.svg"></span></h2>
      <p title="Lorem ipsum dolor sit amet, consectetur adipiscing elit." class="card-description text is-caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
    </div>
    <ul class="card-metadata">
      <li class="card-metadataItem text is-caption"><span class="icon icon--privacy icon--public"></span>
        <p>MapCard.shared.PUBLIC <span>| MapCard.views</span></p>
      </li>
      <!---->
      <li class="card-metadataItem text is-caption"><span class="icon"><img inline-svg="" src="../assets/icons/maps/calendar.svg"></span>
        <p>MapCard.lastUpdate</p>
      </li>
      <li class="card-metadataItem text is-caption"><span class="icon"><img inline-svg="" src="../assets/icons/maps/tag.svg"></span>
        <!---->
        <featuresdropdown-stub list="Hi,Hello,CARTO Rules,Shows dropdown" feature="tag" linkroute="tagSearch"><span class="feature-text text is-caption is-txtGrey">4 MapCard.tags</span></featuresdropdown-stub>
      </li>
    </ul>
  </div>
</a>
`;

exports[`MapCard.vue should render description and tags 1`] = `
<a href="http://example.com/viz/e97e0001-f1c2-425e-8c9b-0fb28da59200" class="card map-card card--can-hover">
  <div class="card-media"><img src="http://hello.example.com/api/v1/map/static/named/tpl_e97e0001_f1c2_425e_8c9b_0fb28da59200/600/280.png">
    <!---->
  </div> <span class="checkbox card-select"><input type="checkBox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../assets/icons/common/checkbox.svg"></span></span>
  <div class="card-actions">
    <mapquickactions-stub map="[object Object]"></mapquickactions-stub>
  </div>
  <div class="card-text">
    <div class="card-header">
      <h2 title="First Map" class="card-title title is-caption">
        First Map&nbsp;
        <span class="card-favorite"><img svg-inline="" src="../assets/icons/common/favorite.svg"></span></h2>
      <p title="Lorem ipsum dolor sit amet, consectetur adipiscing elit." class="card-description text is-caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
    </div>
    <ul class="card-metadata">
      <li class="card-metadataItem text is-caption"><span class="icon icon--privacy icon--public"></span>
        <p>MapCard.shared.PUBLIC <span>| MapCard.views</span></p>
      </li>
      <!---->
      <li class="card-metadataItem text is-caption"><span class="icon"><img inline-svg="" src="../assets/icons/maps/calendar.svg"></span>
        <p>MapCard.lastUpdate</p>
      </li>
      <li class="card-metadataItem text is-caption"><span class="icon"><img inline-svg="" src="../assets/icons/maps/tag.svg"></span>
        <ul class="card-tagList">
          <li>
            <router-link to="[object Object]">Hi</router-link><span>, </span>
          </li>
          <li>
            <router-link to="[object Object]">Hello</router-link><span>, </span>
          </li>
          <li>
            <router-link to="[object Object]">CARTO Rules</router-link>
            <!---->
          </li>
          <!---->
        </ul>
        <!---->
      </li>
    </ul>
  </div>
</a>
`;

exports[`MapCard.vue should show the map is shared 1`] = `
<a href="http://cdb.localhost.lan:3000/viz/hello.e97e0001-f1c2-425e-8c9b-0fb28da59200" class="card map-card card--can-hover">
  <div class="card-media"><img src="http://cdb.example.com/api/v1/map/static/named/tpl_e97e0001_f1c2_425e_8c9b_0fb28da59200/600/280.png">
    <!---->
  </div>
  <!---->
  <div class="card-actions">
    <mapquickactions-stub map="[object Object]"></mapquickactions-stub>
  </div>
  <div class="card-text">
    <div class="card-header">
      <h2 title="First Map" class="card-title title is-caption">
        First Map&nbsp;
        <span class="card-favorite"><img svg-inline="" src="../assets/icons/common/favorite.svg"></span></h2>
      <p class="card-description text is-caption is-txtSoftGrey">MapCard.noDescription</p>
    </div>
    <ul class="card-metadata">
      <!---->
      <li class="card-metadataItem text is-caption"><span class="icon icon--privacy icon--sharedBy" style="background-image: url(/assets/unversioned/images/avatars/avatar_mountain_green.png);"></span>
        <p>MapCard.sharedBy</p>
      </li>
      <li class="card-metadataItem text is-caption"><span class="icon"><img inline-svg="" src="../assets/icons/maps/calendar.svg"></span>
        <p>MapCard.lastUpdate</p>
      </li>
      <li class="card-metadataItem text is-caption"><span class="icon"><img inline-svg="" src="../assets/icons/maps/tag.svg"></span>
        <ul class="card-tagList">
          <li><span>MapCard.noTags</span></li>
        </ul>
        <!---->
      </li>
    </ul>
  </div>
</a>
`;
